--- a/main.css
+++ b/main.css
@@ -9,7 +9,22 @@ body {
     flex-direction: column;
 }
 
+menu {
+    flex: 1;
+    display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    padding-left: 15px;
+}
+
+
+menu .nav-item {
+    padding: 0 0.45em;
+    align-items: center;
+}
+
 header {
+    background-color: rgb(185, 49, 142);
     flex: 0 80px;
 }
 
@@ -19,6 +34,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background-color: aliceblue;
   }
 
 footer {
