--- a/main.css
+++ b/main.css
@@ -54,8 +54,17 @@ footer .pallete-credit{
 }
 
 
-@media(max-height: 500px){
+@media(max-height: 600px){
     footer{
+        display: none;
+    }
+}
+
+@media(max-height: 500px){
+    header.container-fluid{
+        display: none;
+    }
+    nav.navbar.fixed-top{
         display: none;
     }
 }
