--- a/instructions.css
+++ b/instructions.css
@@ -14,7 +14,6 @@ menu {
     display: flex;
     flex-direction: row !important;
     align-items: center;
-    padding-left: 15px;
 }
 
 
@@ -33,9 +32,15 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    padding: 100px;
     background: linear-gradient(to bottom, aliceblue, #c9d5ef);
   }
+
+h2 {
+    padding: 20px;
+    font-style: italic;
+}
 
 footer {
     flex: 0 60px;
