--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,5 @@
-html, body {
+.body {
     height: 100%;
-    margin: 0;
-}
-
-body {
     margin: 0;
     display: flex;
     flex-direction: column;
