--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,12 @@
-.body {
+html, .body {
     height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.body {
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
@@ -31,6 +37,8 @@ header {
 
 main {
     flex: 1;
+    margin: 0;
+    min-height:0;
     display: flex;
     flex-direction: column;
     align-items: center;
