--- a/src/leaderboard/leaderboard.css
+++ b/src/leaderboard/leaderboard.css
@@ -9,66 +9,18 @@ body {
     flex-direction: column;
 }
 
-menu {
-    flex: 1;
-    display: flex;
-    flex-direction: row !important;
-    align-items: center;
-    padding-left: 15px;
+.table table {
+    margin: 50px;
 }
 
-
-menu .nav-item {
-    padding: 0 0.45em;
-    align-items: center;
+.table thead th {
+    background-color: #0c3ca3 !important;
+    color: white;
 }
 
-header {
-    background-color: rgb(185, 49, 142);
-    flex: 0 80px;
-}
-
-main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background: linear-gradient(to bottom, aliceblue, #c9d5ef);
-  }
-
-thead {
-    background-color: #0c3ca3;
-}
-
-footer {
-    flex: 0 60px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-left: .4em;
-    padding-right: .4em;
-    background-color: rgb(85, 0, 113);
-}
-
-
-footer .pallete-credit{
-    float: right;
-    align-items: center;
-}
-
-
-@media(max-height: 600px){
-    footer{
-        display: none;
-    }
-}
-
-@media(max-height: 500px){
-    header.container-fluid{
-        display: none;
-    }
-    nav.navbar.fixed-top{
-        display: none;
-    }
+td {
+    max-width: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
